--- a/flags/styles.css
+++ b/flags/styles.css
@@ -1,5 +1,6 @@
 :root {
 	--red-main-color: #FF0000; 
+	background-color: #BBBBBB;
 }
 
 .all-flags{
@@ -25,6 +26,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	background-color: #FFFFFF;
 }
 
 .canada__red-bord {
@@ -42,6 +44,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-color: #FFFFFF;
 }
 
 .jp__red-dot {
